# AperiodiTile

./: .gitignore  CMakeLists.txt  artcreationexporter.cpp  artcreationexporter.h  customtiledetector.cpp  customtiledetector.h  main.cpp  mathanalysistool.cpp  mathanalysistool.h  tilinggenerator.cpp  tilinggenerator.h
